Tailwind + fixed broken styles

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,8 @@ html {
 
   footer {
     display: flex;
+    position: fixed;
+    width: 100%;
     justify-content: center;
     align-items: center;
     font-size: 1em;
@@ -29,11 +31,13 @@ html {
 
   header {
     border-bottom-style: solid;
+    border-bottom-width: 0.1em;
     border-color: dimgray;
   }
 
   footer {
     border-top-style: solid;
+    border-top-width: 0.1em;
     border-color: dimgray;
   }
 
@@ -43,9 +47,10 @@ html {
   }
 
   .tasks {
-    border-left-style: ridge;
+    border-left-style: solid;
+    border-left-width: 0.2em;
     border-color: dimgray;
-    height: 100%;
+    max-height: 100%;
     width: 85vw;
   }
 
@@ -57,8 +62,9 @@ html {
   .projectHeader, .taskHeader {
     display: flex;
     padding: .5em;
-    border-bottom-style: ridge;
+    border-bottom-style: solid;
     border-color: dimgray;
+    border-bottom-width: 0.2em;
     justify-content: center;
     font-size: 24px;
   }
@@ -67,6 +73,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    max-height: 100%;
     gap: .8em;
     padding: .8em;
   }
@@ -75,12 +82,14 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    
     align-items: center;
     border-style: solid;
+    border-width: 0.2em;
+    border-color: black;
     height: 10em;
     width: 10em;
     overflow: auto;
-    overflow: hidden;
     border-radius: 2em;
     padding: 0.3em;
     gap: 6px;
@@ -93,6 +102,8 @@ html {
     background: none;
     color: inherit;
     border: solid;
+    border-width: 0.2em;
+    border-color: black;
     padding: 0;
     font: inherit;
     cursor: pointer;
@@ -119,6 +130,8 @@ html {
     justify-content: center;
     align-items: center;
     border-style: solid;
+    border-width: 0.2em;
+    border-color: black;
     width: 90%;
     min-height: 2em;
     border-radius: 2em;
